[gd_scene load_steps=2 format=3 uid="uid://c3game"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_game"]

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="ScoreLabel" type="Label" parent="UILayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 5.0
offset_right = 100.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "0  -  0"
horizontal_alignment = 1

[node name="CountdownLabel" type="Label" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 72
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="UILayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 5.0
offset_bottom = 30.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.5, 0.5, 0.6, 1)
text = ""
horizontal_alignment = 2
